--- a/feature/smart-config/src/main/res/layout/item_image_event.xml
+++ b/feature/smart-config/src/main/res/layout/item_image_event.xml
@@ -116,7 +116,7 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:src="@drawable/ic_condition"
+            android:src="@drawable/ic_image_condition"
             android:contentDescription="@string/content_desc_actions_count"/>
 
         <TextView
