--- a/feature/smart-config/src/main/res/layout/item_event_toggle.xml
+++ b/feature/smart-config/src/main/res/layout/item_event_toggle.xml
@@ -48,7 +48,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/event_name"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:src="@drawable/ic_condition"
+        android:src="@drawable/ic_image_condition"
         android:contentDescription="@string/content_desc_conditions_count"/>
 
     <TextView
