--- a/feature/smart-config/src/main/res/menu/menu_image_event_config.xml
+++ b/feature/smart-config/src/main/res/menu/menu_image_event_config.xml
@@ -24,7 +24,7 @@
     <item
         android:id="@+id/page_conditions"
         android:enabled="true"
-        android:icon="@drawable/ic_condition"
+        android:icon="@drawable/ic_image_condition"
         android:title="@string/menu_item_title_conditions"/>
     <item
         android:id="@+id/page_actions"
