--- a/smartautoclicker/src/main/res/layout/item_event_card.xml
+++ b/smartautoclicker/src/main/res/layout/item_event_card.xml
@@ -44,6 +44,22 @@
             android:contentDescription="@string/content_desc_image_condition"
             tools:src="@drawable/ic_image_condition" />
 
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/condition_text"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginHorizontal="@dimen/margin_horizontal_mini"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/divider"
+            android:background="?attr/colorSurfaceVariant"
+            android:gravity="center"
+            android:maxLines="3"
+            android:contentDescription="@string/content_desc_image_condition"
+            tools:visibility="gone"
+            tools:text="Text to detect" />
+
         <com.google.android.material.divider.MaterialDivider
             android:id="@+id/divider"
             android:layout_width="match_parent"
